# libsc

./: CMakeLists.txt
cmake/: options.cmake
example/: CMakeLists.txt
iniparser/: dictionary.c
src/: CMakeLists.txt  sc.c  sc.h  sc_config.h.in
test/: CMakeLists.txt
